fix: poor visibility on light mode

--- a/public/style/global.css
+++ b/public/style/global.css
@@ -31,6 +31,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
       --color-light: #1F2937;
+      --color-highlight-one: #FF9F1C;
   }
 }
 
